<package>
  <name>robot_state_chain_publisher</name>
  <version>0.0.2</version>
  <description>
    This package allows you to publish the state of a robot to the transform library topic. 
    In contrast to robot_state_publisher, it publishes the complete kinematic chain.
  </description>
  <author email="moesenle@cs.tum.edu">Lorenz Moesenlechner</author>
  <maintainer email="kazhoyan@cs.tum.edu">Gayane Kazhoyan</maintainer>
  <license>BSD</license>

  <url>http://github.com/code-iai/robos_state_chain_publisher</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>kdl_parser</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>

  <run_depend>kdl_parser</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  
  <export>
    <!-- <cpp cflags="-I${prefix}/include/"/> -->
  </export>
</package>
